<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/customborder"
            android:orientation="vertical">

            <TextView
                style="@style/CustomText"
                android:id="@+id/question1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/q1" />

            <CheckBox
                android:id="@+id/q1_Checkbox1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q1_Checkbox1" />

            <CheckBox
                android:id="@+id/q1_Checkbox2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q1_Checkbox2" />

            <CheckBox
                android:id="@+id/q1_Checkbox3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q1_Checkbox3" />

            <CheckBox
                android:id="@+id/q1_Checkbox4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q1_Checkbox4" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="checkQ1Answer"
                android:text="@string/check" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/customborder"
            android:orientation="vertical">

            <TextView
                style="@style/CustomText"
                android:id="@+id/question2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/q2" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <RadioButton
                    android:id="@+id/q2_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/q2_radiobutton1"/>
                <RadioButton
                    android:id="@+id/q2_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/q2_radiobutton2"/>
                <RadioButton
                    android:id="@+id/q2_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/q2_radiobutton3"/>
                <RadioButton
                    android:id="@+id/q2_4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/q2_radiobutton4"/>
            </RadioGroup>

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="checkQ2Answer"
                android:text="@string/check" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/customborder"
            android:orientation="vertical">

            <TextView
                style="@style/CustomText"
                android:id="@+id/question3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/q3" />

            <EditText
                android:id="@+id/q3Input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:hint="@string/hint"
                android:inputType="number" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="checkQ3Answer"
                android:text="@string/check" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/customborder"
            android:orientation="vertical">

            <TextView
                style="@style/CustomText"
                android:id="@+id/question4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/q4" />

            <EditText
                android:id="@+id/q4Input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:hint="@string/hint"
                android:inputType="number" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="checkQ4Answer"
                android:text="@string/check" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/customborder"
            android:orientation="vertical">

            <TextView
                style="@style/CustomText"
                android:id="@+id/question5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/q5" />

            <EditText
                android:id="@+id/q5Input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:hint="@string/hint"
                android:inputType="number" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="checkQ5Answer"
                android:text="@string/check" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/customborder"
            android:orientation="vertical">

            <TextView
                style="@style/CustomText"
                android:id="@+id/question6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/q6" />

            <EditText
                android:id="@+id/q6Input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:hint="@string/hint"
                android:inputType="number" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="checkQ6Answer"
                android:text="@string/check" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>